gccida/c2/equiv_constant
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/equiv_constant/src/cse.c:4827:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/equiv_constant/src/cse.c:4975:26: error: use of undeclared identifier 'machine_mode'
v21 = canon_hash( v13, ( machine_mode)BYTE2( v14)); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/equiv_constant/src/obj/cse.o] Error 1
